Fixes some spacing issues

--- a/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
+++ b/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
@@ -1580,14 +1580,17 @@ span.input-group-addon .dropdown-toggle {
 	overflow: auto;
 }
 
+.draggableWidget {
+    margin-bottom: 20px;	
+}
+
 .small-overview-widget {
 	background-color: #fcfcfc;
 	display: inline-block;
+    padding: 5px 10px 10px 10px;
 	width: 100%;
-	padding: 5px 10px 10px 10px;
 	border: 1px solid #e8e8e8;
 	border-radius: 3px;
-	margin-bottom: 20px;
 }
 
 
